--- a/html/page_connexion_site.html
+++ b/html/page_connexion_site.html
@@ -1,40 +1,41 @@
 <!doctype html>
 <html>
- <head>
 
- <title>Connexion au compte</title>
- <meta charset="utf-8">
- <!-- importer le fichier de style -->
- <link rel="stylesheet" href="../css/connexion.css" media="screen" type="text/css" />
- <link rel="icon" href="../images/Mon projet (4).png">
+<head>
+
+    <title>Connexion au compte</title>
+    <meta charset="utf-8">
+    <!-- importer le fichier de style -->
+    <link rel="stylesheet" href="../css/connexion.css" media="screen" type="text/css" />
+    <link rel="icon" href="../images/Mon projet (4).png">
+
 </head>
- <body>
-    <a href="../html/index.html"><img src="../images/Mon projet (4).png"> </a>
-</img>
+
+<body>
+    <a href="../html/index.html"><img src="../images/Mon projet (4).png">
+        </img></a>
+    <div id="container">
 
 
-    </img>
- <div id="container">
-  
- 
- <h1>Connexion</h1>
- 
- <label><b>Nom d'utilisateur</b></label>
+        <h1>Connexion</h1>
 
- 
- <input type="text" placeholder="Entrer le nom d'utilisateur" name="username" required>
+        <label><b>Nom d'utilisateur</b></label>
 
- <label><b>Mot de passe</b></label>
- <input type="password" placeholder="Entrer le mot de passe" name="password" required>
 
- <input type="submit" id='login' value='Se connecter' >
+        <input type="text" placeholder="Entrer le nom d'utilisateur" name="username" required>
 
- <input type="submit" id='oubli' value='Mot de passe oublié ?' >
+        <label><b>Mot de passe</b></label>
+        <input type="password" placeholder="Entrer le mot de passe" name="password" required>
 
-<a href="../html/pageinscription.html">Pas encore membre ?</a>
+        <input type="submit" id='login' value='Se connecter'>
+
+        <input type="submit" id='oubli' value='Mot de passe oublié ?'>
+
+        <a class='inscrit' href="../html/pageinscription.html">Pas encore membre ? </a>
 
 
 
- </div>
- </body>
+    </div>
+</body>
+
 </html>
