--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,9 @@
 				<div class="superbounce2">
 					<li><a href="Histoire.html">Histoire</a></li>
 				</div>
-
+				<div class="superbounce2">
+					<li><a href="#FAQ">FAQ</a></li>
+				</div>
 			</ul>
 		</nav>
 
@@ -71,7 +73,7 @@
 				<div class="row">
 					<div class="counter">
 						<i class="fas fa-users"></i>
-						<div class="num">850</div>
+						<div class="num">38</div>
 						Pompiers sauvés grâce à TPCF
 					</div>
 					<div class="row">
@@ -86,7 +88,59 @@
 					</div>
 				</div>
 	</section>
+	<section>
 
+		<div id="FAQ">
+			<div class="container">
+				<h1>Pour en apprendre plus sur TPCF :</h1>
+				<form>
+					<h2>Question 1 : TPCF est une entreprise</h2>
+					<label for="q1r1">
+						<input type="radio" id="q1r1" name="q1" value="1">
+						100% française
+					</label>
+					<label for="q1r2">
+						<input type="radio" id="q1r2" name="q1" value="0">
+						Américaine
+					</label>
+					<label for="q1r3">
+						<input type="radio" id="q1r3" name="q1" value="0">
+						Japonaise
+					</label>
+					<h2>Question 2 : Combien de pompier pourraient être sauvés par an grâce à TPCF ? (estimation)</h2>
+					<label for="q2r1">
+						<input type="radio" id="q2r1" name="q2" value="1">
+						50
+					</label>
+					<label for="q2r2">
+						<input type="radio" id="q2r2" name="q2" value="0">
+						40000
+					</label>
+					<label for="q2r3">
+						<input type="radio" id="q2r3" name="q2" value="0">
+						0
+					</label>
+					<h2>Question 3 : Par qui à été créée TPCF</h2>
+					<label for="q3r1">
+						<input type="radio" id="q3r1" name="q3" value="0">
+						Des pompiers
+					</label>
+					<label for="q3r2">
+						<input type="radio" id="q3r2" name="q3" value="0">
+						Des commerciaux
+					</label>
+					<label for="q3r3">
+						<input type="radio" id="q3r3" name="q3" value="1">
+						Des ingénieurs
+					</label>
+					<input type="submit" value="Valider" id="submit">
+				</form>
+				<div class="result"></div>
+			</div>
+			<script src="script.js"></script>
+		</div>
+
+	</section>
 	<footer>
 		<div class="separator"></div>
 		<div class="social-media">
