--- a/html/page_connexion_site.html
+++ b/html/page_connexion_site.html
@@ -29,7 +29,7 @@
 
         <input type="submit" id='login' value='Se connecter'>
 
-        <input type="submit" id='oubli' value='Mot de passe oublié ?'>
+        <a href="../html/mdpoubli.html"><input type="submit" id='oubli' value='Mot de passe oublié ?'></a>
 
         <a class='inscrit' href="../html/pageinscription.html">Pas encore membre ? </a>
 
