création quizz + faq + avancement page histoire

--- a/html/histoire.html
+++ b/html/histoire.html
@@ -18,7 +18,10 @@
 			<div class="superbounce2">
 				<li><a href="Histoire.html">Histoire</a></li>
 			</div>
-
+			<div class="superbounce2">
+				<li><a href="../html/FAQ.html">FAQ</a></li>
+			</div>
+		</ul>
 		</ul>
 	</nav>
 
@@ -46,10 +49,42 @@
 
 
 <body>
-
-
-
-
+	<div class="container">
+		<div class="ronds">
+			<div class="rond">
+				<img src="../images/IMG_9994_Facetune_09-01-2022-16-47-16.jpg" alt="image1">
+				<span>responsable technique</span>
+			</div>
+			<div class="rond">
+				<img src="image2.jpg" alt="image2">
+				<span>responsable technique</span>
+			</div>
+			<div class="rond">
+				<img src="../images/IMG_9994_Facetune_09-01-2022-16-47-16.jpg" alt="image3">
+				<span>responsable technique</span>
+			</div>
+			<div class="rond">
+				<img src="image4.jpg" alt="image4">
+				<span>responsable technique</span>
+			</div>
+			<div class="rond">
+				<img src="image5.jpg" alt="image5">
+				<span>responsable technique</span>
+			</div>
+			<div class="rond">
+				<img src="image6.jpg" alt="image6">
+				<span>responsable technique</span>
+			</div>
+		</div>
+		<div class="texte">
+			<div class="rectangle">
+				<h1>Notre Histoire</h1>
+				<p>Nous sommes une équipe de 6 ingénieurs sortant d'école et nous nous demandions comment les pompiers
+					étaient protégés. Après avoir déouvert qu'il y avait encore des blessés et des morts pendant les
+					interventions, nous avons décidé de créer TPCF.</p>
+			</div>
+		</div>
+	</div>
 </body>
 
 
