--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,10 @@
 					<li><a href="Histoire.html">Histoire</a></li>
 				</div>
 				<div class="superbounce2">
-					<li><a href="#FAQ">FAQ</a></li>
+					<li><a href="#Quizz">Quizz</a></li>
+				</div>
+				<div class="superbounce2">
+					<li><a href="../html/FAQ.html">FAQ</a></li>
 				</div>
 			</ul>
 		</nav>
@@ -54,6 +57,7 @@
 				<li><a class="dropdown-item" href="../html/pageinscription.html">Inscription</a></li>
 			</ul>
 		</div>
+
 	</header>
 
 	<section class="hero">
@@ -90,7 +94,7 @@
 	</section>
 	<section>
 
-		<div id="FAQ">
+		<div id="Quizz">
 			<div class="container">
 				<h1>Pour en apprendre plus sur TPCF :</h1>
 				<form>
