--- a/html/histoire.html
+++ b/html/histoire.html
@@ -17,7 +17,7 @@
 			</div>
 
 			<div class="superbounce2">
-				<li><a href="Histoire.html">Histoire</a></li>
+				<li><a href="histoire.html">Histoire</a></li>
 			</div>
 			<div class="superbounce2">
 				<li><a href="../html/FAQ.html">FAQ</a></li>
@@ -50,6 +50,10 @@
 
 
 <body>
+	<div class="Notre-histoire">
+		<h2>Notre histoire</h2>
+		<h2>Notre histoire</h2>
+	</div>
 	<div class="container">
 		<div class="ronds">
 			<div class="rond">
@@ -77,13 +81,62 @@
 				<span>responsable technique</span>
 			</div>
 		</div>
-		<div class="texte">
-			<div class="rectangle">
-				<h1>Notre Histoire</h1>
+		<div class="texte1.1">
+			<div class="rectangle1">
+				<h1>Qui sommes-nous ?</h1>
 				<p>Nous sommes une équipe de 6 ingénieurs sortant d'école et nous nous demandions comment les pompiers
 					étaient protégés. Après avoir déouvert qu'il y avait encore des blessés et des morts pendant les
 					interventions, nous avons décidé de créer TPCF.</p>
 			</div>
+		</div>
+		<div class="texte1_2">
+			<div class="rectangle2">
+				<h1>Pourquoi TPCF ?</h1>
+				<p>Techologies de Protection pour les Combattants du Feu à vu le jour suite à la prise de conscience, de 6 ingénieurs en devenir, de la dangerosité sur la santé à court, moyen et long terme lié au métier de pompier. Vous trouverez ci-dessous plusieurs points importants sur les dangers auxquelles nos combattants du feu s'expose tous les jours. </p>
+			</div>
+		</div>
+		<div class="undercontainer1">
+			<div class="texte2">
+				<div class="uc1rectangle">
+					<h1>Toxicité de la fumée</h1>
+					<p>"L’exposition à de nombreux produits de combustion. La toxicité de la fumée dépend beaucoup du combustible (les matériaux ou les produits chimiques qui brûlent), de la chaleur dégagée par l’incendie et de la quantité d’oxygène qui alimente la combustion. Voici les produits de combustion les plus courants :
+						<ul>
+							<li>particules fines;</li>
+							<li>monoxyde de carbone;</li>
+							<li>dioxyde de carbone;</li>
+							<li>oxydes d’azote;</li>
+							<li>oxydes de soufre</li>
+							<li>monoxyde de carbone;</li>
+							<li>composés organiques volatils;</li>
+							<li>formaldéhyde."</li>
+						</ul>
+						<a href="https://www.cchst.ca/oshanswers/occup_workplace/firefighter.html#:~:text=situations%20dangereuses%20pr%C3%A9cises.-,Quels%20sont%20quelques%2Duns%20des%20risques%20pour%20la,et%20la%20s%C3%A9curit%C3%A9%20des%20pompiers%3F&text=Lors%20du%20sauvetage%20de%20victimes,l'h%C3%A9patite%20B%20et%20C.">Source: CCHST</a>
+					</p>
+				</div>
+			</div>
+			<img src="../images/FiremaninParisriot.jpeg" alt="image7">
+		</div>
+		<div class="undercontainer2">
+			<img src="../images/TableauStressPompier.png" alt="image8">
+			<div class="texte3">
+				<div class="uc2rectangle">
+					<h1>Les facteurs de stress</h1>
+					<p>"Le tableau I montre les 10 situations rapportées comme les plus intenses et les plus fréquentes sur les 35 proposées dans le questionnaire. Elles appartiennent aux deux catégories distinctes de situations professionnelles génératrices de stress : celles liées aux missions opérationnelles rapportées en bleu dans le tableau, (interventions pour secours à victimes ou incendie …) et celles liées à l’organisation du travail (administrative, logistique …). Parmi celles-ci, la présence d’enfants morts, blessés ou maltraités sur intervention apparaît comme la situation la plus intense pour près de 70% des pompiers (8 à 9% d’interventions à la BSPP concernent des victimes de moins de quinze ans). En revanche, si le décès d’une victime adulte est cité comme facteur de stress fréquemment rencontré pour près de la moitié des pompiers, il n’apparaît pas dans la liste des dix situations les plus intensément ressenties."
+						<a href="http://www.remede.org/communaute/photos/877ab25f9cdd12bb55bf46bb7a827f64/Reanoxyo-25-3.pdf">Source: remede.org</a>
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="undercontainer3">
+			<div class="texte4">
+				<div class="uc3rectangle">
+					<h1>Un travail physique</h1>
+					<p>"L’activité physique au travail peut être la cause d’accidents de type traumatique, d’atteintes de l’appareil locomoteur qui peuvent être source d’handicap physique. Elle peut également entraîner fatigue et douleur qui sont souvent ignorées alors qu’elles sont des signes précoces de surcharge de l’appareil locomoteur à ne pas négliger. L’activité physique au travail peut également être à l’origine de risques cardio-vasculaires, toxiques ou d’hyperthermie et d’atteintes cutanées. Enfin, il est également important de ne pas omettre l’inactivité physique au travail qui constitue un risque de survenue de certaines pathologies ou d’accidents."
+						<a href="https://www.inrs.fr/risques/activite-physique/effets-sante.html#:~:text=L'activit%C3%A9%20physique%20au%20travail%20peut%20%C3%A9galement%20%C3%AAtre%20%C3%A0%20l,certaines%20pathologies%20ou%20d'accidents.">Source: inrs.fr</a>
+					</p>
+				</div>
+			</div>
+			<img src="../images/pompierechelle.jpeg" alt="image9">
 		</div>
 	</div>
 </body>
