--- a/siteapp2/html/index.html
+++ b/siteapp2/html/index.html
@@ -2,7 +2,15 @@
 <html>
 
 <head>
-
+<!-- Google Translate Widget -->
+<div id="google_translate_element"></div>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+}
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<!-- End of Google Translate Widget -->
 	<title>Technologie de Protection pour les Combattants du Feu</title>
 	<link rel="stylesheet" href="../css/index.css">
 	<link rel="icon" href="../images/Mon projet (4).png">
@@ -27,6 +35,9 @@
 				</div>
 				<div class="superbounce2">
 					<li><a href="Histoire.html">Histoire</a></li>
+				</div>
+				<div class="superbounce2">
+					<li><a href="../html/casernes.php">Casernes</a></li>
 				</div>
 				<div class="superbounce2">
 					<li><a href="#Quizz">Quizz</a></li>
@@ -177,7 +188,7 @@
 						alt="Instagram"></a>
 			</div>
 			<div class="facebook">
-				<a href="#"><img src="../images/facebook-logo.png" alt="Facebook"></a>
+				<a href="https://www.facebook.com/profile.php?id=100092721286388"><img src="../images/facebook-logo.png" alt="Facebook"></a>
 			</div>
 			<div class="twitter">
 				<a href="https://twitter.com/TPCF_france"><img src="../images/twitter-logo.png" alt="Twitter"></a>
@@ -189,11 +200,5 @@
 			<p>Tous droits réservés &copy; 2023</p>
 		</div>
 	</footer>
-
-
-
-
-
 </body>
-
 </html>
