--- a/siteapp2/html/mdpoubli.html
+++ b/siteapp2/html/mdpoubli.html
@@ -2,7 +2,15 @@
 <html>
 
 <head>
-
+<!-- Google Translate Widget -->
+<div id="google_translate_element"></div>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+}
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<!-- End of Google Translate Widget -->
     <title>mot de passe oublié</title>
     <meta charset="utf-8">
 
