--- a/siteapp2/html/produit.html
+++ b/siteapp2/html/produit.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+    <!-- Google Translate Widget -->
+  <div id="google_translate_element"></div>
+  <script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+  }
+  </script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <!-- End of Google Translate Widget -->
     <title>La ceinture</title>
     <link rel="stylesheet" type="text/css" href="../css/produit.css">
     <link rel="icon" href="../images/Mon projet (4).png">
