--- a/siteapp2/html/index.html
+++ b/siteapp2/html/index.html
@@ -2,7 +2,15 @@
 <html>
 
 <head>
-
+<!-- Google Translate Widget -->
+<div id="google_translate_element"></div>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+}
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<!-- End of Google Translate Widget -->
 	<title>Technologie de Protection pour les Combattants du Feu</title>
 	<link rel="stylesheet" href="../css/index.css">
 	<link rel="icon" href="../images/Mon projet (4).png">
@@ -29,6 +37,9 @@
 					<li><a href="Histoire.html">Histoire</a></li>
 				</div>
 				<div class="superbounce2">
+					<li><a href="../html/casernes.php">Casernes</a></li>
+				</div>
+				<div class="superbounce2">
 					<li><a href="#Quizz">Quizz</a></li>
 				</div>
 				<div class="superbounce2">
@@ -38,7 +49,7 @@
 		</nav>
 
 		
-		<script src="../js/nindex.js"></script>
+		<script src="../js/index.js"></script>
 
 		<div id="nav-dropdown" class="navbar-dropdown dropdown ml-3">
 			<button class="btn btn-primary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,6 +58,7 @@
 			<ul class="dropdown-content">
 				<li><a class="dropdown-item" href="../html/page_connexion_site.php">Connexion</a></li>
 				<li><a class="dropdown-item" href="../html/pageinscription.php">Inscription</a></li>
+				
 			</ul>
 		</div>
 
@@ -177,7 +189,7 @@
 						alt="Instagram"></a>
 			</div>
 			<div class="facebook">
-				<a href="#"><img src="../images/facebook-logo.png" alt="Facebook"></a>
+				<a href="https://www.facebook.com/profile.php?id=100092721286388"><img src="../images/facebook-logo.png" alt="Facebook"></a>
 			</div>
 			<div class="twitter">
 				<a href="https://twitter.com/TPCF_france"><img src="../images/twitter-logo.png" alt="Twitter"></a>
@@ -189,11 +201,5 @@
 			<p>Tous droits réservés &copy; 2023</p>
 		</div>
 	</footer>
-
-
-
-
-
 </body>
-
 </html>
